--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "repository": "https://github.com/ryanwiemer/gatsby-starter-gcn",
   "author": "Ryan Wiemer <ryan@ryanwiemer.com>",
   "dependencies": {
+    "babel-plugin-macros": "^2.5.1",
     "babel-plugin-styled-components": "^1.10.0",
     "chalk": "^2.4.1",
     "contentful-import": "^7.4.3",
-    "gatsby": "^2.0.73",
-    "gatsby-image": "^2.0.25",
+    "gatsby": "^2.3.4",
+    "gatsby-image": "^2.0.35",
     "gatsby-plugin-canonical-urls": "^2.0.8",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-feed": "^2.0.11",
@@ -19,20 +20,23 @@
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-remark-autolink-headers": "^2.0.12",
     "gatsby-remark-images-contentful": "^2.0.5",
     "gatsby-remark-prismjs": "^3.1.4",
     "gatsby-source-contentful": "^2.0.20",
-    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-source-filesystem": "^2.0.28",
     "gatsby-transformer-remark": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.17",
     "inquirer": "^6.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "path": "^0.12.7",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
+    "react-burger-menu": "^2.6.8",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.1.3"
