--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.8.4",
     "styled-components": "^4.1.3"
   },
   "keywords": [
